Removed documentation from swagger endpoint.

--- a/unitime/unitime/templates/rest_framework_swagger/index.html
+++ b/unitime/unitime/templates/rest_framework_swagger/index.html
@@ -4,124 +4,11 @@
 {% endblock %}
 
 {% block extra_scripts %}
-<br><br>
-<div class="swagger-ui-wrap">
-  <h2>
-    Examples:
-  </h2>
-    <pre>
-      GET: /course/
-    </pre>
-      Returns a list with all the courses thats in the DB.
-    <pre>
-      [
-        {
-          "name_en": "Computer Networks - an introduction",
-          "name_sv": "Datornät - introduktion",
-          "syllabus_sv": "http://api.kursinfo.lnu.se/GenerateDocument...",
-          "syllabus_en": "http://api.kursinfo.lnu.se/GenerateDocument...",
-          "course_code": "1DV701",
-          "course_id": "268260",
-          "course_reg": "69016",
-          "course_points": "7,5 hp",
-          "course_location": "Växjö",
-          "course_language": "Engelska",
-          "course_speed": "50%",
-          "semester": "VT17",
-          "url": "https://lnu.se/kurs/1DV701"
-        },
-      ...
-      ]
-    </pre>
-    <hr>
-    <pre>
-      HEAD: /course/
-    </pre>
-    In the response header, the Content-Length variable tells how many
-    courses are in the DB.
-    In the example below we only have one course in the DB.
-    <pre>
-      Content-Length = 1
-    </pre>
-    <hr>
-
-
-    <pre>
-      GET: /course/1DV701/
-    </pre>
-      Gives a specific course object.
-    <pre>
-        {
-          "name_en": "Computer Networks - an introduction",
-          "name_sv": "Datornät - introduktion",
-          "syllabus_sv": "http://api.kursinfo.lnu.se/GenerateDocument...",
-          "syllabus_en": "http://api.kursinfo.lnu.se/GenerateDocument...",
-          "course_code": "1DV701",
-          "course_id": "268260",
-          "course_reg": "69016",
-          "course_points": "7,5 hp",
-          "course_location": "Växjö",
-          "course_language": "Engelska",
-          "course_speed": "50%",
-          "semester": "VT17",
-          "url": "https://lnu.se/kurs/1DV701"
-        }
-    </pre>
-    <hr>
-
-    <pre>
-      GET: /event/1DV701/
-    </pre>
-    Gives the events related to a course in a list.
-    <pre>
-      [
-        {
-          "room": "D1136A_V",
-          "startdate": "2017-01-17",
-          "starttime": "15:15",
-          "endtime": "17:00",
-          "desc": "",
-          "teacher": "Morgan Ericsson, Ola Flygt",
-          "info": "Course start"
-        },
-        ...
-      ]
-    </pre>
-    <hr>
-
-    <pre>
-      POST: /room/
-    </pre>
-      Get info about a room. The most important info is Latitude and Longitude. If no info can be found about the room a JSON response with: {'message': 'Cant find room!'} is returned.
-      The endpoint is trying to find a pattern in the <ROOM> string to match a room number, so you dont need to parse the room
-      string in an event items 'room'.
-    <pre>
-      Make a request with the body: {'room': '<ROOM>'}
-
-      -------------------------------------------------------------------------------------------------
-      Example: {'room': 'D1136A_V'}
-
-      We ask for a single room and get a single room item back.
-
-      >>> req = requests.post('https://api.kodkollektivet.se/unitime/room/', data={'room': 'D1136A_V'})
-      >>> req.json()
-      [[{'lat': 56.855604, 'floor': 1, 'city': 'Växjö', 'name': 'D1136', 'lon': 14.82834}]]
-
-      -------------------------------------------------------------------------------------------------
-      Example: {'room': 'Datorsal D1142V (PC), Datorsal D1170A_V'}
-
-      This is a little bit more sloppy request but the server handles it and find the rooms and gives back 2 items.
-
-      >>> req = requests.post('https://api.kodkollektivet.se/unitime/room/', data={'room': 'Datorsal D1142V (PC), Datorsal D1170A_V'})
-      >>> req.json()
-      [
-        [{'lat': 56.855726, 'floor': 1, 'city': 'Växjö', 'name': 'D1142V', 'lon': 14.828432}],
-        [{'lat': 56.855845, 'floor': 1, 'city': 'Växjö', 'name': 'D1170', 'lon': 14.82878}]
-      ]
-
-
-    </pre>
-    <hr>
-
+<br>
+<br>
+<br>
+<br>
+<div align="center">
+  <p>API documentation can be found at: <a href="https://github.com/Kodkollektivet/unitime-api">https://github.com/Kodkollektivet/unitime-api</a></p>
 </div>
 {% endblock %}
